# Workshop_Computer_VCV_Bridge

./: .gitignore  README.md
card/: BridgeProtocol.hpp  CMakeLists.txt  info.yaml  tusb_config.h  usb_descriptors.c  vcv_bridge.cpp
plugin/: Makefile  plugin.json
plugin/res/: generate_panel.py
plugin/src/: SerialPort.hpp  VCVBridge.cpp  plugin.cpp  plugin.hpp
